--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           </div>
         </div>
         <div class="u-center-text u-margin-top-huge">
-          <a href="" class="btn-text">Read all stories &rarr;</a>
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
       <section class="section-book">
