--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-          <a href="" class="btn btn--green">DISCOVER ALL TOURS</a>
+          <a href="#section-popup" class="btn btn--green">DISCOVER ALL TOURS</a>
         </div>
       </section>
 
